<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/size_10">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/size_8"
        android:layout_marginTop="@dimen/size_8"
        android:layout_marginEnd="@dimen/size_8"
        android:layout_marginBottom="@dimen/size_8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/sdvItemImage"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_240"
                android:contentDescription="@string/movie_photo"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvMovieTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8"
                android:ellipsize="end"
                android:maxLines="10"
                android:padding="@dimen/size_8"
                android:text="@string/movie_title"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivIMDB" />

            <TextView
                android:id="@+id/tvDescripton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ellipsize="end"
                android:maxLines="10"
                android:padding="@dimen/size_8"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="@dimen/size_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMovieTitle" />

            <ImageView
                android:id="@+id/ivIMDB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_8"
                android:layout_marginTop="@dimen/size_16"
                android:contentDescription="@string/imdb_logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sdvItemImage"
                app:srcCompat="@drawable/rank_imdb" />

            <ImageView
                android:id="@+id/ivRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_8"
                android:layout_marginTop="@dimen/size_20"
                android:contentDescription="@string/fav_logo"
                app:layout_constraintStart_toEndOf="@+id/ivIMDB"
                app:layout_constraintTop_toBottomOf="@+id/sdvItemImage"
                app:srcCompat="@drawable/stars_full" />

            <TextView
                android:id="@+id/tvVote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_8"
                android:layout_marginTop="@dimen/size_20"
                android:text="@string/vote"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/ivRate"
                app:layout_constraintTop_toBottomOf="@+id/sdvItemImage" />

            <TextView
                android:id="@+id/tvRelease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_16"
                android:layout_marginTop="@dimen/size_20"
                android:text="@string/realease"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/tvVote"
                app:layout_constraintTop_toBottomOf="@+id/sdvItemImage" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>